templete/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/templete/templete.cpp: In function 'll doubling(ll, ll, std::vector<long long int>)':
/Users/kakeshitamasamichi/Desktop/kyopro/templete/templete.cpp:221:65: error: no matching function for call to 'std::vector<std::vector<int> >::vector(ll, std::vector<long long int>)'
  221 | std::vector<std::vector<int>> next(LOG_Q + 1, std::vector<ll>(N));
      |                                                                 ^
In file included from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/vector:67,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/queue:61,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/x86_64-apple-darwin19/bits/stdc++.h:86,
                 from /Users/kakeshitamasamichi/Desktop/kyopro/templete/templete.cpp:1:
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:653:2: note: candidate: 'template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with _InputIterator = _InputIterator; <template-parameter-2-2> = <template-parameter-1-2>; _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]'
  653 |  vector(_InputIterator __first, _InputIterator __last,
      |  ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:653:2: note:   template argument deduction/substitution failed:
/Users/kakeshitamasamichi/Desktop/kyopro/templete/templete.cpp:221:65: note:   deduced conflicting types for parameter '_InputIterator' ('long long int' and 'std::vector<long long int>')
  221 | std::vector<std::vector<int>> next(LOG_Q + 1, std::vector<ll>(N));
      |                                                                 ^
In file included from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/vector:67,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/queue:61,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/x86_64-apple-darwin19/bits/stdc++.h:86,
                 from /Users/kakeshitamasamichi/Desktop/kyopro/templete/templete.cpp:1:
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:625:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::vector<int> >]'
  625 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:625:43: note:   no known conversion for argument 1 from 'll' {aka 'long long int'} to 'std::initializer_list<std::vector<int> >'
  625 |       vector(initializer_list<value_type> __l,
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:607:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::vector<int> >]'
  607 |       vector(vector&& __rv, const allocator_type& __m)
      |       ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:607:23: note:   no known conversion for argument 1 from 'll' {aka 'long long int'} to 'std::vector<std::vector<int> >&&'
  607 |       vector(vector&& __rv, const allocator_type& __m)
      |              ~~~~~~~~~^~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:589:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::vector<int> >; std::false_type = std::integral_constant<bool, false>]'
  589 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:589:7: note:   candidate expects 3 arguments, 2 provided
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:585:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::vector<int> >; std::true_type = std::integral_constant<bool, true>]'
  585 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:585:7: note:   candidate expects 3 arguments, 2 provided
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:575:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, const allocator_type&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::vector<int> >]'
  575 |       vector(const vector& __x, const allocator_type& __a)
      |       ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:575:28: note:   no known conversion for argument 1 from 'll' {aka 'long long int'} to 'const std::vector<std::vector<int> >&'
  575 |       vector(const vector& __x, const allocator_type& __a)
      |              ~~~~~~~~~~~~~~^~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:572:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]'
  572 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:572:7: note:   candidate expects 1 argument, 2 provided
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:553:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]'
  553 |       vector(const vector& __x)
      |       ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:553:7: note:   candidate expects 1 argument, 2 provided
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:522:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const value_type&, const allocator_type&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::value_type = std::vector<int>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::vector<int> >]'
  522 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:522:47: note:   no known conversion for argument 2 from 'std::vector<long long int>' to 'const value_type&' {aka 'const std::vector<int>&'}
  522 |       vector(size_type __n, const value_type& __value,
      |                             ~~~~~~~~~~~~~~~~~~^~~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:510:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const allocator_type&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::vector<int> >]'
  510 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:510:51: note:   no known conversion for argument 2 from 'std::vector<long long int>' to 'const allocator_type&' {aka 'const std::allocator<std::vector<int> >&'}
  510 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |                             ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:497:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<std::vector<int> >]'
  497 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:497:7: note:   candidate expects 1 argument, 2 provided
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:487:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector() [with _Tp = std::vector<int>; _Alloc = std::allocator<std::vector<int> >]'
  487 |       vector() = default;
      |       ^~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/stl_vector.h:487:7: note:   candidate expects 0 arguments, 2 provided
